# KSHRAM

./: .clang-format  .gitignore  CHANGELOG.txt  CMakeLists.txt  License.txt  README.md
doc/: KSHRAM commands guide_EN.md  KSHRAM命令说明_CN.md
icon/: icon.ase
src/: CMakeLists.txt  main.cpp  versions.h.in
src/Application/: CMakeLists.txt  application_bus.cpp  application_bus.h
src/Application/BasicInsertion/: CMakeLists.txt  knob_approx.cpp  knob_approx.h  note_approx.cpp  note_approx.h  write_mark.cpp  write_mark.h
src/Application/CameraAmp/: CMakeLists.txt  camera_amp.cpp  camera_amp.h
src/Application/CommandBatch/: CMakeLists.txt  command_batch.cpp  command_batch.h
src/Application/CurveKnob/: CMakeLists.txt  curve_knob.cpp  curve_knob.h
src/Application/SVFX/: CMakeLists.txt  svfx.cpp  svfx.h
src/Application/Scripting/: CMakeLists.txt  delay.cpp  delay.h  looper.cpp  looper.h
src/Application/Shared/: curve_generator.cpp  curve_generator.h  curves.cpp  curves.h  knob_query.cpp  knob_query.h
src/Application/SmoothCamera/: CMakeLists.txt  smooth_camera.cpp  smooth_camera.h  smooth_camera_increment.cpp  smooth_camera_increment.h
src/Application/Swing/: CMakeLists.txt  swing.cpp  swing.h
src/Application/TiltStyler/: CMakeLists.txt  style_config.cpp  style_config.h  tilt_guide.cpp  tilt_guide.h  tilt_position.h  tilt_style.cpp  tilt_style.h  tilt_styler.cpp  tilt_styler.h
src/Chart/: chart.cpp  chart.h  chart_inline.h  indexed_chart.cpp  indexed_chart.h  indexed_chart_inline.h
src/Command/: command.cpp  command.h  command_inline.h  command_map.cpp  command_map.h  command_map_inline.h
src/ConsoleUI/: CMakeLists.txt  console_ui.cpp  console_ui.h  main.cpp
src/Entry/: entry.cpp  entry.h  entry_inline.h
src/Errors/: error_collector.cpp  error_collector.h  error_collector_inline.h
src/FileSystem/: path_manager.cpp  path_manager.h  path_manager_inline.h
src/Header/: header.cpp  header.h  header_inline.h
src/IndexList/: index_list.h  index_list_deprecated.h  index_list_window.h  index_list_window_static.h  pair.h
src/Measure/: measure.cpp  measure.h  measure_inline.h
src/QtUI/: CMakeLists.txt  kshram_qt_bridge.cpp  kshram_qt_bridge.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/misc/: enums.cpp  enums.h  utilities.cpp  utilities.h
test/: batch.ksh  cameras.ksh  demo_batches.txt  svfx.ksh  swing.ksh  tiltstyle.ksh  tsumami.ksh
